<resources>
    <string name="app_name">TrainTicks</string>
    <string name="nh_p_s_i_n_tho_i">Nhập Email</string>
    <string name="nh_p_m_t_kh_u">Nhập mật khẩu</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ng_k">Đăng ký</string>
    <string name="ga_i">Ga đi</string>
    <string name="ch_n_ga_i">Chọn ga đi</string>
    <string name="ga_n">Ga đến</string>
    <string name="ch_n_ga_n">Chọn ga đến</string>
    <string name="mua_v_t_u">Mua vé tàu</string>
    <string name="t_v_t_u">Tìm chuyến tàu</string>
    <string name="ch_n_ng_y_i">Chọn ngày đi</string>
    <string name="ch_n_ng_y_v">Chọn ngày về</string>
    <string name="nh_p_t_n_c_a_b_n">Nhập tên của bạn</string>
    <string name="nh_p_s_cmnd">Nhập số CMND</string>
    <string name="nh_p_email">Nhập email</string>
    <string name="inputphone">Nhập số điện thoại</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
    <string name="ma_doi_tuong">Mã Đối Tượng</string>
    <string name="internet">Vui lòng kiểm tra internet của bạn</string>
    <string name="dialog_box">Hộp thoại</string>
    <string name="loading">Đang tải</string>
    <string name="name_invalid">tên không hợp lệ</string>
    <string name="cmnd_invalid">Chứng minh thư không hợp lệ</string>
    <string name="email_invalid">Email không hợp lệ</string>
    <string name="phone_invalid">Số điện thoại không hợp lệ</string>
    <string name="success">Successfully</string>
    <string name="verify_account">Xác nhận tài khoản</string>
    <string name="verify_user_1">Điều này chứng tỏ rằng tài khoản thực sự thuộc về bạn</string>
    <string name="verify_user_2">Xác nhận mã được cung cấp trong email của bạn.xxx.xxx</string>
    <string name="insert_code">Nhập code</string>
    <string name="check_mail">Mã code đã được gửi vào mail của bạn</string>
    <string name="verify_user_error">Mã code không đúng vui lòng kiểm tra lại</string>
    <string name="null_email">Vui lòng nhập email đầy đủ</string>
    <string name="no_acount">Không có tài khoản</string>
    <string name="send">Gửi</string>
    <string name="please_wait">Vui lòng đợi</string>
    <string name="sending_mail">Gửi mail....</string>
    <string name="send_mail_success">Gửi mã thành công</string>
    <string name="send_mail_error">Gửi mã email thất bại</string>
    <string name="type_ga">Chọn thời gian</string>
    <string name="ga_di">Chọn ga đi</string>
    <string name="ga_den">Chọn ga đến</string>
    <string name="please_choice_ga_di">Vui lòng chọn ga đi </string>
    <string name="please_choice_ga_den">Vui lòng chọn ga đến </string>
    <string name="please_choice_time">Vui lòng chọn thời gian </string>
    <string name="no_reponse_sever">Không tìm thấy kết quả</string>
    <string name="chon_chuyen_tau">Chọn chuyến tàu</string>
    <string name="chon_ve_tau">Chọn Vé Tàu</string>
    <string name="chon_toa_cho_ngoi">Chọn Toa + Chỗ Ngồi</string>
    <string name="toa">Toa</string>
    <string name="vui_long_chon_toa">Vui lòng chọn toa</string>
    <string name="tiep_tuc">Tiếp Tục</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="cho">Chỗ</string>
    <string name="chon_toi_da_ve_tau">Chỉ được chọn tối đa 4 vé</string>
    <string name="thong_tin_khach_di_tau">Thông tin khách đi tàu</string>
    <string name="thong_tin_nguoi_mua">Thông tin người mua</string>
    <string name="chinh_sach_thoa_thuan">Chính sách thoả thuận</string>
    <string name="tien_hanh_dat_ve">Tiến hành đặt vé</string>
    <string name="chi_tiet_dat_ve">Chi tiết đặt vé</string>
    <string name="chinh_sach">Tôi đã đọc và đồng ý tuân thủ tất cả các qui định mua vé trực tuyến, các chương trình khuyến mãi của tổng công ty đường sắt Việt Nam và chịu trách nhiệm về tính sác thực của các thông tin trên</string>
</resources>