<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_height="match_parent"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:elevation="10dp"
        app:cardElevation="10dp"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/verify_account"
                android:gravity="center"
                android:textSize="22dp"
                android:textColor="#000"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxWidth="250dp"
                android:text="@string/verify_user_1"
                android:gravity="center"
                android:textSize="16dp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                android:background="@drawable/boder_button_login_notselected"
                android:layout_height="40dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:padding="5dp"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_width="30dp"
                        app:cardCornerRadius="15dp"
                        android:layout_height="30dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/account_circle_24px"/>

                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:id="@+id/txtEmail"
                        android:gravity="center"
                        android:textSize="16dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:maxWidth="250dp"
                android:text="@string/verify_user_2"
                android:textSize="16dp"
                />
            <EditText
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/insert_code"
                android:id="@+id/editTextCode"
                android:gravity="center"
                android:background="@drawable/selecter_boder_login"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="end"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/bacground"
                    android:textColor="#fff"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:text="@string/send"
                    android:textSize="16dp"
                    android:id="@+id/btnSend"
                    android:textStyle="bold"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>