<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@null"
    tools:context=".src.page.user.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/mABL"
        android:layout_width="match_parent"
        android:elevation="0dp"
        app:elevation="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_login">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:background="@null"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|enterAlways" />

        <TextView
            android:id="@+id/mTVHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="9dp"
            android:background="@null"
            android:padding="@dimen/_10sdp"
            android:text="Good Morning, Register to Train Ticks"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_collapseMode="pin" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:inputType="text"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/nh_p_t_n_c_a_b_n" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTCMND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTName"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="number"
                android:hint="@string/nh_p_s_cmnd" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTCMND"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/nh_p_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mEDTPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mEDTEmail"
                android:layout_marginTop="@dimen/_20sdp"
                android:inputType="phone"
                android:hint="@string/inputphone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@id/mEDTPhone"
                android:id="@+id/relative_1"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/mSpiner"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:textColorHint="#000000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignBottom="@+id/mSpiner"
                    android:background="#B5000000"/>
            </RelativeLayout>


            <Button
                android:background="@drawable/btn_login"
                android:layout_marginBottom="@dimen/_40sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mBTNRegister"
                android:layout_below="@id/relative_1"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Đăng ký" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>